--- a/apps/ai/requirements.txt
+++ b/apps/ai/requirements.txt
@@ -21,3 +21,7 @@ piper-tts>=1.2.0
 # オプション：RVC (将来のGPU音声変換)
 # torch>=2.1.0
 # torchaudio>=2.1.0
+
+# Virtual Camera & WebSocket
+pyvirtualcam>=0.11.1
+flask-sock>=0.7.0
